--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           cursor: pointer;
           height: 56px;
           width: 56px;
-          background-image: url(https://github.com/mjdanielson/StoreLocator/blob/master/marker.png);
+          background-image: url(marker.png);
           background-color: rgba(0, 0, 0, 0);
         }
 
